--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "vue-hot-reload-api": "^1.3.3",
     "vue-html-loader": "^1.2.2",
     "vue-loader": "^10.0.0",
+    "vue-mixins": "^0.3.6",
     "vue-style-loader": "^1.0.0",
     "vue-template-compiler": "^2.1.7",
     "webpack": "^1.13.0",
